# shrub-height

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
reports/: ~$MAMBO.pptx
scripts/prepro/: compute_slope.sh
scripts/tests/: create_test_samples.py  rasterio_window_mask.py
src/data_collection/: shrub_stats_las.py  shrub_stats_sfm.py
src/modelling/: run.py  utils.py
src/prepro/: dvc.yaml  manual_labeled.py  normalize_dsm.py  point2pol.py  rgb_adjust_origin.py  sfm_to_cog.sh
src/shrubheight/modelling/: run.py
src/shrubheight/prepro/: point2pol.py
src/shrubheight/treatment/: shrub_stats_las.py  shrub_stats_sfm.py
src/treatment/: las_pc_at_shrubs.py  shrub_stats_las.py  shrub_stats_sfm.py
tests/: conftest.py  test_las_stats.py  test_normalize_dsm.py  test_point2pol.py  test_sfm_stats.py
tests/data/: field_pols.fgb  shrub_sample.dbf  shrub_sample.prj  shrub_sample.shp  shrub_sample.shx  stats_field_lidar_leafon.csv  test_dsm.tif
