[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shrubheight"
version = "0.1.5"
requires-python = ">=3.9"
description = "This package supports the processing and analysis of shrub heights from SfM, terrain and LiDAR data"
readme = "README.md"
dependencies = [
    "boto3",
    "dvc",
    "dotenv",
    "numpy",
    "pandas",
    "geopandas",
    "rasterio",
    "matplotlib",
    "s3fs",
    "laspy",
    "scikit-learn"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "--cov=shrubheight"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
